# low-latency-lob

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  NORTH-STAR.md  PRINCIPAL-REVIEW-2026-07.md  README.md  STATE.md
.cargo/: config.toml
.github/workflows/: ci.yml
arb_v1/: Cargo.toml
arb_v1/src/: main.rs
arbitrage/src/: main.rs
bench/: Cargo.toml  lib.sh  metal_run.sh  regen_plots.sh  run_contention.sh  run_phase4.sh  run_phase9_amd.sh  stress_ring  stress_seqlock
bench/results/: RESULTS.md  branch_experiment.csv  cache_experiment.csv  e2e.csv  e2e.md  env.json  flat_memory.csv  read_path.csv  ring.md  ring_bench.csv  seqlock.md  seqlock_read.csv  service_sweep.csv  service_update_btree_concentrated_d256.hgrm  service_update_btree_uniform_d2.hgrm  service_update_btree_uniform_d64.hgrm  service_update_flat_concentrated_d256.hgrm  service_update_flat_uniform_d2.hgrm  service_update_flat_uniform_d64.hgrm  service_update_rev_concentrated_d256.hgrm  service_update_rev_uniform_d2.hgrm  service_update_rev_uniform_d64.hgrm  service_update_sorted_concentrated_d256.hgrm  service_update_sorted_uniform_d2.hgrm  service_update_sorted_uniform_d64.hgrm  sustained.csv  throughput.csv
bench/results/perf/: c2c_ring.data  c2c_ring.txt  c2c_seqlock.data  c2c_seqlock.txt  perf_btree.txt  perf_flat.txt  perf_rev.txt  perf_sorted.txt  perf_summary.csv  perf_unavailable.txt
bench/src/: clock.rs  harness.rs  main.rs  plot.rs  recorder.rs  workload.rs
bench/src/benches/: branch_exp.rs  cache_exp.rs  e2e.rs  flat_memory.rs  mod.rs  profile.rs  read.rs  ring.rs  seqlock.rs  service.rs  sustained.rs  throughput.rs
book/: Cargo.toml  FROZEN.md
book/src/: book.rs  btree.rs  event.rs  flat.rs  lib.rs  price.rs  rev_vec.rs  sorted_vec.rs
book/tests/: oracle.rs
book/tests/common/: mod.rs
collector/: Cargo.toml  config.yaml
collector/src/: main.rs  metrics.rs
collector/src/exchanges/: binance2.rs  bybit.rs  hyperliquid.rs  kraken.rs  mod.rs
docs/: ARCHITECTURE.md  BENCHMARKS.md  PROFILING.md  SELF-AUDIT.md  x-thread.md
docs/legacy-reference/: binance-ws-parsing.rs.txt
docs/specs/: kickoff-brief.md  phase0-spec.md  phase1-spec.md  phase10-spec.md  phase2-spec.md  phase3-spec.md  phase4-spec.md  phase5-spec.md  phase6-spec.md  phase7-spec.md  phase8-spec.md  phase9-spec.md
engine/: Cargo.toml
engine/src/: lib.rs  main.rs  pack.rs
engine/tests/: pipeline.rs
feed/: Cargo.toml  README.md
feed/corpus/: btcusdt-sample.mdf  btcusdt-sample.meta.json  burst-s1-100k.mdf  burst-s1-100k.meta.json  flashcrash-s1-100k.mdf  flashcrash-s1-100k.meta.json  steady-s1-100k.mdf  steady-s1-100k.meta.json
feed/src/: corpus.rs  lib.rs  rng.rs  synthetic.rs
sync/: Cargo.toml
sync/src/: lib.rs  ring.rs  seqlock.rs
sync/tests/: loom_ring.rs  loom_seqlock.rs  stress_ring.rs  stress_seqlock.rs
