[package]
name         = "bench"
version      = "0.1.0"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true

[lints]
workspace = true

[dependencies]
book = { path = "../book" }
core_affinity = "0.8.3"
engine = { path = "../engine" }
feed = { path = "../feed" }
hdrhistogram = "7.5.4"
plotters = { version = "0.3.7", default-features = false, features = ["svg_backend", "line_series"] }
quanta = "0.12.6"
sync = { path = "../sync" }
