[package]
name = "collector"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }

futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
simd-json = { version = "0.13", features = ["serde_impl"] }
bincode = "1.3"
url = "2.4"
anyhow = "1.0"
redis = { version = "0.24", features = ["tokio-comp"] }
ordered-float = "3.1"
reqwest = { version = "0.12.23", features = ["json", "gzip", "brotli", "rustls-tls"] } 
async-trait = "0.1"
rand = "0.9.2"
